--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to DigitalOcean
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   deploy:
@@ -20,7 +20,7 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         script: |
           cd /home/saddleup/saddleup
-          git pull origin main
+          git pull origin master
           source venv/bin/activate
           pip install -r requirements.txt
           sudo systemctl restart saddleup
