--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,19 @@ jobs:
             echo "=== DEPLOYMENT CHANGES ==="
             git log --oneline -5
             
+            # Add cache-busting to frontend files
+            echo "=== CACHE-BUSTING ==="
+            COMMIT_HASH=$(git rev-parse --short HEAD)
+            echo "Using commit hash for cache-busting: $COMMIT_HASH"
+            
+            # Update HTML files to include version parameter
+            if [ -f "frontend/index.html" ]; then
+              # Replace CSS and JS references with versioned ones
+              sed -i "s/styles\.css/styles.css?v=$COMMIT_HASH/g" frontend/index.html
+              sed -i "s/script\.js/script.js?v=$COMMIT_HASH/g" frontend/index.html
+              echo "✅ Updated cache-busting parameters in index.html"
+            fi
+            
             # Update backend dependencies
             echo "=== UPDATING BACKEND ==="
             source venv/bin/activate
